Revision history for {{$dist->name}}

{{$NEXT}}
    - be less dynamic about building sub-class strings; no need to be fancy

0.2       2014-06-01 22:07:12-04:00 America/New_York
    - fix Channel objects so that methods are chainable

0.1       2014-05-26 21:39:13-04:00 America/New_York
    - Initial release