@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
     - be less dynamic about building sub-class strings; no need to be fancy
+    - adhere closer to AnyEvent::RabbitMQ::Channel structure
 
 0.2       2014-06-01 22:07:12-04:00 America/New_York
     - fix Channel objects so that methods are chainable
